change the update paths to inside rental-tile.hbs

--- a/app/templates/rental.hbs
+++ b/app/templates/rental.hbs
@@ -1,7 +1,5 @@
 <h2>More information about {{model.owner}}'s {{model.type}}:</h2>
 
-{{update-rental rental=model update="update"}}
-
-{{rental-detail rental=model destroyRental="destroyRental" destroyReview="destroyReview"}}
+{{rental-detail rental=model destroyRental="destroyRental" destroyReview="destroyReview" update="update"}}
 
 {{new-review saveReview="saveReview" rental=model}}
